重构模块基类实现并优化初始化、配置加载和资源释放等逻辑